# quad-image

./: .babelrc  .dockerignore  .eslintrc.js  .eslintrc.json  .gitignore  .prettierrc.js  .travis.yml  Cargo.toml  Dockerfile  LICENSE.APACHE2  Makefile  README.md  assume-cjs-resolver.cjs  cypress.config.ts  eslint.config.mts  jest.config.ts  lollipop.tsx  package-lock.json  package.json  quad-image.nginx  quad-image.service  tsconfig.json  tslint.json  vitest.config.ts  webpack.config.cjs  webpack.config.js  webpack.config.mjs
dssim-core/: README.md  dssim_core.js  dssim_core_bg.wasm  dssim_core_bg.wasm.d.ts
js/: .babelrc  .gitignore  Makefile  a.js  a.ts  package-lock.json  package.json  rollup.config.js  tsconfig.json
src/: gallery.rs  ingest.rs  main.rs  tests.rs  thumbs.rs
tests/: orient.heic  prefix-only-invalid-weird-magic.heic
tests/web/: image-ops.test.ts  woob.test.tsx
tests/web/cypress/: image-ops.cy.tsx  tsconfig.json
web/: app.tsx  gallery.tsx  home.tsx  image-debug.tsx  image.tsx  images.tsx  index.ejs  index.html  index.tsx  lollipop.js  lollipop.ts  lollipop.tsx  main.css  root.css  shine.tsx  stubs.d.ts  thumb-list.tsx  tiles.tsx  types.ts  types.tsx  user.tsx
web/components/: gallery-input.tsx  sign-in.tsx  thumb-list.tsx  upload.tsx
web/dumb/: index.html
web/gallery/: gallery.css  gallery.js  gallery.ts  image-list.tsx  index.html  index.tsx  paging.tsx  tiles.tsx
web/locket/: client.ts  dssim.ts  err.ts  err.tsx  resize.ts
web/mocks/: thumbs.tsx
web/plain/dumb/: index.html
web/plain/terms/: index.html
web/shine/: errors.tsx  files.ts  image.tsx  images.tsx  index.html  index.tsx  net.ts  user.tsx
web/terms/: index.html
