[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
name = "quad-image"
version = "0.1.1"

description = "An image host"
repository = "https://github.com/FauxFaux/quad-image"
readme = "README.md"

categories = ["multimedia"]
license = "MIT OR Apache-2.0"

edition = "2018"

[badges.travis-ci]
repository = "FauxFaux/quad-image"

[dependencies]
anyhow = "1"
base64 = "0.12"
gif = "0.10"
hmac = "0.9"
kamadak-exif = "0.5"
lazy_static = "1"
libc = "0.2"
rand = "0.8"
rayon = "1"
regex = "1"
serde_json = "1"
sha2 = "0.9"
tempfile-fast = "0.3"

[dependencies.image]
version = "0.23"
# features -= "hdr", "dxt", "dds"
default-features = false
features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "jpeg_rayon"]

[dependencies.rouille]
# upstream master
git = "https://github.com/tomaka/rouille"
rev = "e9692e1b19c8d25a742129a16bbe826c686ab274"

[dependencies.rusqlite]
version = "0.24"
features = ["bundled"]

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
