[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
name = "quad-image"
version = "0.1.1"

description = "An image host"
repository = "https://github.com/FauxFaux/quad-image"
readme = "README.md"

categories = ["multimedia"]
license = "MIT OR Apache-2.0"

edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["multipart"] }
axum-macros = "0.5"
base64 = "0.22"
gif = "0.13"
hmac = "0.12"
kamadak-exif = "0.6"
lazy_static = "1"
libc = "0.2"
rand = "0.9"
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tower-http = { version = "0.6", features = ["fs"] }
tempfile-fast = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies.image]
version = "0.25.1"
# features -= "hdr", "dxt", "dds"
default-features = false
features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp"]

[dependencies.rusqlite]
version = "0.35"
features = ["bundled"]

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
